image file correction

--- a/certificates.html
+++ b/certificates.html
@@ -12,7 +12,7 @@
   <center>
     <h3>1/2</h3>
     <p>
-      <img src="images/certificates/B-tech.jpeg" alt="developer's graduation certificate">
+      <img src="images/certificates/B-tech.jpg" alt="developer's graduation certificate">
     </p>
     <br><br>
     <h3>2/2</h3>
