--- a/personalDetails.html
+++ b/personalDetails.html
@@ -18,7 +18,7 @@
     Languages known: English, Hindi & Gujarati
     <br>
     <br>
-    Address: 2/6, Janak Hse, Mumbai 400037, India
+    Address: 2/6, Mumbai 400037, India
   </h3>
   </p>
   <br>
