--- a/personalDetails.html
+++ b/personalDetails.html
@@ -18,7 +18,13 @@
     Languages known: English, Hindi & Gujarati
     <br>
     <br>
-    Address: 2/6, Mumbai 400037, India
+    Address: 2/6, Janak House, Mumbai 400037, India
+    <br>
+    <br>
+    Mobile: 9820692094
+    <br>
+    <br>
+    Email: bipinmehta289@gmail.com    
   </h3>
   </p>
   <br>
